# U-VLM

./: .gitignore  LICENSE  README.md  pyproject.toml
uvlm/: __init__.py
uvlm/configs/plans/: UVLM_ResEncUNetLPlans_abdomen_cls.json  UVLM_ResEncUNetLPlans_abdomen_report.json  UVLM_ResEncUNetLPlans_abdomen_seg_basic.json  UVLM_ResEncUNetLPlans_chest_cls.json  UVLM_ResEncUNetLPlans_chest_report.json  UVLM_ResEncUNetLPlans_chest_seg_basic.json
uvlm/dataloading/: __init__.py  class_balancer.py  data_loader_cls_reportgen.py  data_shape_preloader.py  dataset_csv_blosc2.py
uvlm/evaluation/: __init__.py  __main__.py  evaluate.py
uvlm/evaluation/metrics/: __init__.py  classification.py  nlg.py
uvlm/examples/datasets/Dataset200_UVLM_ChestSeg_Test/: dataset.json  dataset_train_seg_basic.csv
uvlm/examples/datasets/Dataset201_UVLM_ChestClsReport_Test/: dataset.json  train_merged.csv
uvlm/examples/datasets/Dataset202_UVLM_AbdomenAll_Test/: dataset.json  dataset_train_seg_basic.csv  train_merged.csv
uvlm/inference/: __init__.py  __main__.py  inference_cls.py  inference_reportgen.py  inference_seg.py  inference_utils.py  predict_base.py  predict_cls.py  predict_reportgen.py
uvlm/networks/: __init__.py  res_encoder_unet.py  uvlm.py  uvlm_qwen3.py
uvlm/preprocessing/: __init__.py  common_utils.py  lesion_measurement.py  preprocess_abdomen_cls_report.py  preprocess_abdomen_seg.py  preprocess_ct_rate_cls_report.py  preprocess_rexgrounding_seg.py
uvlm/preprocessing/configs/: abdomen_atlas_config.json  ct_rate_config.json  rexgrounding_ct_config.json
uvlm/run/: uvlm_train.py
uvlm/scripts/: generate_plans.py  run_evaluate.sh  run_inference.sh  run_preprocess.sh  run_train.sh  setup_env.sh
uvlm/training/: __init__.py  nnUNetTrainer_ResEncoderUNet.py  nnUNetTrainer_UVLM.py  nnUNetTrainer_UVLM_Qwen3.py
uvlm/training/logging/: nnunet_logger.py
uvlm/training/lr_scheduler/: __init__.py  multigroup_polylr.py
uvlm/utilities/: collate_outputs.py
