[project]
name = "uvlm"
version = "1.0.0"
requires-python = ">=3.9"
description = "U-VLM: Hierarchical Vision Language Modeling for Report Generation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pengcheng Shi", email = "shipc1220@gmail.com"},
    { name = "Medical Image Insights" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'medical image analysis',
    'vision-language model',
    'radiology report generation',
    'progressive training',
    'multi-layer injection',
    'U-Net',
    'nnU-Net'
]
dependencies = [
    "torch>=2.0.0",
    "nnunetv2>=2.2",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "blosc2>=2.0.0",
    "batchgenerators>=0.25",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "SimpleITK>=2.2.0",
    "tqdm>=4.64.0",
    "einops>=0.6.0",
]

[project.urls]
homepage = "https://github.com/yinghemedical/U-VLM"
repository = "https://github.com/yinghemedical/U-VLM"

[project.optional-dependencies]
quantization = [
    "bitsandbytes>=0.41.0"
]
dev = [
    "black",
    "ruff",
    "pre-commit"
]

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["uvlm*"]
